--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<h2 class="top-banner__h2">Reifan</h2>
 					<span class="brand-span">Ship Engineer</span>
 				</div>
-				<p>One Man. One Mission. Can He Go Beyond?One Man. One Mission. Can He Go Beyond?</p>
+				<p>Bekerja di perusahaan ternama BUMN yaitu PT PAL dan mendapatkan jabatan Direktur Utama. </p>
 				<a href="#" class="brand-button">Read bio > </a>
 			</div>
 		</div>
@@ -71,7 +71,7 @@
 		<div class="about-me-inner site-container">
 			<article class="portfolio-wrapper">
 				<div class="portfolio__img">
-					<img src="./images/about-me.jpg" class="about-me__profile" alt="about me profile picture">
+					<img src="./images/about-me1.jpg" class="about-me__profile" alt="about me profile picture">
 				</div>
 				<div class="portfolio__bottom">
 					<div class="portfolio__name">
@@ -85,13 +85,13 @@
 				<div class="about-me-slider">
 					<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">About me</h2>
-						<p><span>H</span> e has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and the British Fantasy Society journal Dark Horizons. He is also CEO of a company, specializing in custom book publishing and social media marketing services, have created a community for authors to learn and connect.He has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and have created a community for authors to learn and connect.</p>
+						<p><span>M</span> y name Rahmanu Reifan Putra Mayanda you can call me Reifan, I'am seventeen years old and i went to SMAIT AL-Haraki high school. I'am first child and i have one sister. My hobbies are automotive, cycling, and playing basketball. And my favorite food is Rendang.</p>
 						<h4>Author</h4>
 						<p class="p-white">See me</p>
 					</div>
 					<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">About me 2</h2>
-						<p><span>H</span> e has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and the British Fantasy Society journal Dark Horizons. He is also CEO of a company, specializing in custom book publishing and social media marketing services, have created a community for authors to learn and connect.He has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and have created a community for authors to learn and connect.</p>
+						<p><span>M</span> y name Rahmanu Reifan Putra Mayanda you can call me Reifan, I'am seventeen years old and i went to SMAIT AL-Haraki high school. I'am first child and i have one sister. My hobbies are automotive, cycling, and playing basketball. And my favorite food is Rendang.</p>
 						<h4>Author</h4>
 						<p class="p-white">See me</p>
 					</div>
