--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 				</div>
 				<div class="portfolio__bottom">
 					<div class="portfolio__name">
-						<span>J</span>
-						<h2 class="universal-h2">hone Smith</h2>
+						<span>R</span>
+						<h2 class="universal-h2">ahmanu Reifan</h2>
 					</div>
 					<p>Jhone Smith is a short story author, novelist, and award-winning poet.</p>
 				</div>
